Must figure out a way to pass the full path of the images...

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
+    <!-- Jquery ui CSS -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/jquery-ui.css">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-awesome.min.css">
+    <!-- Fancybox CSS -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/jquery.fancybox.min.css">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.css">
+    <!-- Main StyleSheet CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -18,5 +30,25 @@
   </head>
   <body class="dark-bg">
     <div id="root"></div>
+
+    <!-- js crap -->
+    <!-- jQuery Plugin -->
+    <script src="%PUBLIC_URL%/assets/js/jquery-3.2.0.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery-ui.js"></script>
+    <!-- Owl Carousel Plugin -->
+    <!-- <script src="%PUBLIC_URL%/assets/js/owl.carousel.min.js"></script> -->
+    <!-- Main Counterup Plugin-->
+    <script src="%PUBLIC_URL%/assets/js/jquery.counterup.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/countdown.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.scrollUp.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.waypoints.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/shuffle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.fancybox.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/imagesloaded.pkgd.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/wow.js"></script>
+    <!-- Main Script -->
+    <script src="%PUBLIC_URL%/assets/js/theme.js"></script>
   </body>
 </html>
